<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">Asteroides</string>
   <string name="menu_settings">Settings</string>
   <string name="nombreJuego">Asteroides</string>
   <string name="btnJugar">Jugar</string>
   <string name="btnConfigurar">Opciones</string>
   <string name="btnInfo">Sobre el juego</string>
   <string name="btnPuntuaciones">Puntuaciones</string>
   <string name="textoAcercaDe">Juego realizado como ejemplo en el curso de programación de aplicaciones Android en MiríadaX.\n\n<b>Ángel J. Vico</b> (2013).</string>
   <string name="prefMusicaTitulo">Reproducir música</string>
   <string name="prefMusicaResumen">Se reproduce música de fondo</string>
   <string name="prefGraficosTitulo">Tipo de gráficos</string>
   <string name="prefGraficosResumen">Se escoge la representación de gráficos</string>
   <string name="prefFragmentosTitulo">Número de fragmentos</string>
   <string name="prefFragmentosResumen">En cuántos trozos se divide un asteroide</string>
   <string name="btnSalir">Salir</string>
   <string name="listaPuntuacionesVacia">No hay puntuaciones</string>
   <string name="subtituloPuntuacion">Otro texto</string>
   <string name="descIconoPuntuaciones">Puntuación del jugador</string>
   <string name="textoSeleccionPuntuacion">Selección</string>

</resources>