<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
   android:key="preferencias_principal" >

   <CheckBoxPreference
      android:key="musica"
      android:summary="@string/prefMusicaResumen"
      android:title="@string/prefMusicaTitulo" android:enabled="true"/>

   <ListPreference
      android:defaultValue="1"
      android:entries="@array/tiposGraficos"
      android:entryValues="@array/tiposGraficosValores"
      android:key="graficos"
      android:summary="@string/prefGraficosResumen"
      android:title="@string/prefGraficosTitulo" />

   <EditTextPreference
      android:defaultValue="3"
      android:key="fragmentos"
      android:summary="@string/prefFragmentosResumen"
      android:title="@string/prefFragmentosTitulo" />

</PreferenceScreen>